fix: navbar on mobile view

--- a/app/routes/neura-dash/layouts/styles/App.module.css
+++ b/app/routes/neura-dash/layouts/styles/App.module.css
@@ -36,6 +36,7 @@
     width: rem(81);
     height: 100vh !important;
     top: 0;
+    z-index: 101;
   }
 
   &[data-smallscreen="true"][data-collapse="true"] {
